// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly when multiple expenses 1`] = `
<Fragment>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $20.34
  </h1>
</Fragment>
`;

exports[`Should render correctly when single expense 1`] = `
<Fragment>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.34
  </h1>
</Fragment>
`;
